content added to structure in index.html

--- a/index.html
+++ b/index.html
@@ -9,16 +9,29 @@
 </head>
 <body>
     <nav>
+        <div><img src="icons/logo.svg" alt="logo"></div>
+        <div>
+            <ul>
+                <li>Product</li>
+                <li>Customers</li>
+                <li>Pricing</li>
+                <li>Resources</li>
+            </ul>
+        </div>
+        <div>
+            <button class="sign-in">Sign In<a href=""></a></button>
+            <button class="sign-up">Sign Up<a href=""></a></button>
 
+        </div>
     </nav>
 
     <main>
         <section class="intro">
             <div>
-                <h1></h1>
-                <p></p>
-                <button></button>
-                <p></p>
+                <h1>The Design Thinking superpowers</h1>
+                <p>Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p>
+                <button>Get started<a href=""></a></button>
+                <p>Watch the video</p>
             </div>
             <div>
                 <img src="" alt="">
@@ -28,34 +41,34 @@
 
         <section class="we-design-tools">
             <div>
-                <h2></h2>
+                <h2>We design tools to unveil your superpowers</h2>
             </div>
             <div>
                 <div>
                     <img src="" alt="">
-                    <h3></h3>
-                    <p></p>
+                    <h3>First click tests</h3>
+                    <p>While most people enjoy casino gambling,</p>
                 </div>
                 
                 <div>
                     <img src="" alt="">
-                    <h3></h3>
-                    <p></p>
+                    <h3>Design surveys</h3>
+                    <p>Sports betting, lottery and bingo playing for the fun</p>
                 </div>
 
                 <div>
                     <img src="" alt="">
-                    <h3></h3>
-                    <p></p>
+                    <h3>Preference tests</h3>
+                    <p>The Myspace page defines the individual.</p>
                 </div>
 
                 <div>
                     <img src="" alt="">
-                    <h3></h3>
-                    <p></p>
+                    <h3>Five second tests</h3>
+                    <p>Personal choices and the overall personality of the person.</p>
                 </div>
                 <div>
-                    <button></button>
+                    <button>Sign up now<a href=""></a></button>
                 </div>
             </div>
 
@@ -63,40 +76,58 @@
 
         <section class="design-professionals"> 
             <div>
-                <p></p>
-                <h2></h2>
-                <p></p>
+                <p>Effortless Validation for</p>
+                <h2>Design Professionals</h2>
+                <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. 
+                    <span class="bold">Accessory makers</span>
+                    While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun
+                    <span class="bold">Alterationists</span>
+                    If you are looking for a new way to promote your business that won’t cost you more money, 
+                    <span class="bold">Custom Design designers</span>
+                    If you are looking for a new way to promote your business that won’t cost you more money, 
+                </p>
             </div> 
 
             <div>
-                <img src="" alt="">
+                <img src="images/guy-red.png" alt="">
             </div>
 
         </section>
 
         <section class="product-managers">
             <div>
-                <img src="" alt="">
+                <img src="images/guy-blue.png" alt="">
             </div>
 
             <div>
-                <p></p>
-                <h2></h2>
-                <p></p>
-                <li></li>
+                <p>Easier decision making for</p>
+                <h2>Product managers</h2>
+                <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. </p>
+                <li>
+                    <ul>Never worry about overpaying for your energy again.</ul>
+                    <ul>We will only switch you to energy companies that we trust and will treat you right</ul>
+                    <ul>We track the markets daily and know where the savings are.</ul>
+                </li>
             </div> 
 
         </section>
 
         <section class="marketers">
             <div>
-                <p></p>
-                <h2></h2>
-                <p></p>
+                <p>Optimisation for</p>
+                <h2>Marketers</h2>
+                <p>Few would argue that, despite the advancements of feminism over the past three decades, women still face a double standard when it comes to their behavior. 
+                    <span class="bold">Accessory makers</span>
+                    While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun
+                    <span class="bold">Alterationists</span>
+                    If you are looking for a new way to promote your business that won’t cost you more money,
+                    <span class="bold">Custom Design designers</span>
+                    If you are looking for a new way to promote your business that won’t cost you more money, 
+                </p>
             </div> 
 
             <div>
-                <img src="" alt="">
+                <img src="images/guy yellow.png" alt="">
             </div>
         </section>
 
@@ -105,33 +136,34 @@
 
     <footer>
         <div>
-            <img src="" alt="logo">
+            <img src="icons/logo.svg" alt="logo">
         </div>
         
         <div>
-            <h3></h3>
+            <h3>Quick Links</h3>
             <li class="quick-links">
-                <ul></ul>
-                <ul></ul>
-                <ul></ul>
-                <ul></ul>
+                <ul>About Us</ul>
+                <ul>Blog</ul>
+                <ul>Contact</ul>
+                <ul>FAQ</ul>
             </li>
         </div>
 
         <div>
-            <h3></h3>
+            <h3>Legal Stuff</h3>
             <li class="legal-stuff">
-                <ul></ul>
-                <ul></ul>
-                <ul></ul>
-                <ul></ul>
+                <ul>Disclaimer</ul>
+                <ul>Financing</ul>
+                <ul>Privacy Policy</ul>
+                <ul>Terms of service</ul>
             </li>
         </div>
 
         <div>
-            <h3></h3>
+            <h3>knowing you're always on the best energy deal. 
+            </h3>
             <span></span>
-            <button></button>
+            <button>Sign up now <a href=""></a></button>
         </div>
     </footer>
 
