--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;1,700&family=Poppins:wght@400;500;600;700&family=Ramaraja&family=Roboto&display=swap" rel="stylesheet">
     <title>Productly</title>
 </head>
 <body>
     <nav>
-        <div><img src="icons/logo.svg" alt="logo"></div>
+        <div><img src="icons/logo.svg" alt="logo" class="logo"></div>
         <div>
-            <ul>
+            <ul class="navigation">
                 <li>Product</li>
                 <li>Customers</li>
                 <li>Pricing</li>
@@ -27,14 +28,14 @@
 
     <main>
         <section class="intro">
-            <div>
+            <div class="text">
                 <h1>The Design Thinking superpowers</h1>
                 <p>Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p>
                 <button>Get started<a href=""></a></button>
                 <p>Watch the video</p>
             </div>
             <div>
-                <img src="" alt="">
+                <img src="images/three-people.png" alt="">
             </div>
 
         </section>
@@ -43,39 +44,38 @@
             <div>
                 <h2>We design tools to unveil your superpowers</h2>
             </div>
-            <div>
-                <div>
-                    <img src="" alt="">
+            <div class="example">
+                <div class="service">
+                    <img src="icons/first-click.png" alt="" class="icon">
                     <h3>First click tests</h3>
                     <p>While most people enjoy casino gambling,</p>
                 </div>
                 
-                <div>
-                    <img src="" alt="">
+                <div class="service">
+                    <img src="icons/design-surveys.png" alt="" class="icon">
                     <h3>Design surveys</h3>
                     <p>Sports betting, lottery and bingo playing for the fun</p>
                 </div>
 
-                <div>
-                    <img src="" alt="">
+                <div class="service">
+                    <img src="icons/preference-test.png" alt="" class="icon">
                     <h3>Preference tests</h3>
                     <p>The Myspace page defines the individual.</p>
                 </div>
 
-                <div>
-                    <img src="" alt="">
+                <div class="service">
+                    <img src="icons/five-second.png" alt="" class="icon">
                     <h3>Five second tests</h3>
                     <p>Personal choices and the overall personality of the person.</p>
                 </div>
-                <div>
-                    <button>Sign up now<a href=""></a></button>
-                </div>
             </div>
-
+            <div>
+                <button>Sign up now<a href=""></a></button>
+            </div>
         </section>
 
         <section class="design-professionals"> 
-            <div>
+            <div class="content">
                 <p>Effortless Validation for</p>
                 <h2>Design Professionals</h2>
                 <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. 
@@ -99,7 +99,7 @@
                 <img src="images/guy-blue.png" alt="">
             </div>
 
-            <div>
+            <div class="content">
                 <p>Easier decision making for</p>
                 <h2>Product managers</h2>
                 <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. </p>
@@ -113,7 +113,7 @@
         </section>
 
         <section class="marketers">
-            <div>
+            <div class="content">
                 <p>Optimisation for</p>
                 <h2>Marketers</h2>
                 <p>Few would argue that, despite the advancements of feminism over the past three decades, women still face a double standard when it comes to their behavior. 
@@ -136,27 +136,27 @@
 
     <footer>
         <div>
-            <img src="icons/logo.svg" alt="logo">
+            <img src="icons/logo.svg" alt="logo" class="logo">
         </div>
         
         <div>
             <h3>Quick Links</h3>
-            <li class="quick-links">
-                <ul>About Us</ul>
-                <ul>Blog</ul>
-                <ul>Contact</ul>
-                <ul>FAQ</ul>
-            </li>
+            <ul class="quick-links">
+                <li>About Us</li>
+                <li>Blog</li>
+                <li>Contact</li>
+                <li>FAQ</li>
+            </ul>
         </div>
 
         <div>
             <h3>Legal Stuff</h3>
-            <li class="legal-stuff">
-                <ul>Disclaimer</ul>
-                <ul>Financing</ul>
-                <ul>Privacy Policy</ul>
-                <ul>Terms of service</ul>
-            </li>
+            <ul class="legal-stuff">
+                <li>Disclaimer</li>
+                <li>Financing</li>
+                <li>Privacy Policy</li>
+                <li>Terms of service</li>
+            </ul>
         </div>
 
         <div>
