style added to text in index.css

--- a/index.html
+++ b/index.html
@@ -12,17 +12,16 @@
     <nav>
         <div><img src="icons/logo.svg" alt="logo" class="logo"></div>
         <div>
-            <ul class="navigation">
+            <ul class="nav-links">
                 <li>Product</li>
                 <li>Customers</li>
                 <li>Pricing</li>
                 <li>Resources</li>
             </ul>
         </div>
-        <div>
+        <div class="nav-buttons">
             <button class="sign-in">Sign In<a href=""></a></button>
             <button class="sign-up">Sign Up<a href=""></a></button>
-
         </div>
     </nav>
 
@@ -78,14 +77,13 @@
             <div class="content">
                 <p>Effortless Validation for</p>
                 <h2>Design Professionals</h2>
-                <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. 
-                    <span class="bold">Accessory makers</span>
-                    While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun
-                    <span class="bold">Alterationists</span>
-                    If you are looking for a new way to promote your business that won’t cost you more money, 
-                    <span class="bold">Custom Design designers</span>
-                    If you are looking for a new way to promote your business that won’t cost you more money, 
-                </p>
+                <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person.</p> 
+                <h4>Accessory makers</h4>
+                <p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun.</p>
+                <h4>Alterationists</h4>    
+                <p>If you are looking for a new way to promote your business that won’t cost you more money,</p>
+                <h4>Custom Design designers</h4>
+                <p>If you are looking for a new way to promote your business that won’t cost you more money,</p>
             </div> 
 
             <div>
@@ -103,11 +101,11 @@
                 <p>Easier decision making for</p>
                 <h2>Product managers</h2>
                 <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. </p>
-                <li>
-                    <ul>Never worry about overpaying for your energy again.</ul>
-                    <ul>We will only switch you to energy companies that we trust and will treat you right</ul>
-                    <ul>We track the markets daily and know where the savings are.</ul>
-                </li>
+                <ul>
+                    <li>Never worry about overpaying for your energy again.</li>
+                    <li>We will only switch you to energy companies that we trust and will treat you right</li>
+                    <li>We track the markets daily and know where the savings are.</li>
+                </ul>
             </div> 
 
         </section>
@@ -117,13 +115,12 @@
                 <p>Optimisation for</p>
                 <h2>Marketers</h2>
                 <p>Few would argue that, despite the advancements of feminism over the past three decades, women still face a double standard when it comes to their behavior. 
-                    <span class="bold">Accessory makers</span>
-                    While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun
-                    <span class="bold">Alterationists</span>
-                    If you are looking for a new way to promote your business that won’t cost you more money,
-                    <span class="bold">Custom Design designers</span>
-                    If you are looking for a new way to promote your business that won’t cost you more money, 
-                </p>
+                <h4>Accessory makers</h4>
+                <p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
+                <h4>Alterationists</h4>
+                <p>If you are looking for a new way to promote your business that won’t cost you more money,</p>
+                <h4>Custom Design designers</h4>
+                <p>If you are looking for a new way to promote your business that won’t cost you more money,</p> 
             </div> 
 
             <div>
@@ -131,6 +128,7 @@
             </div>
         </section>
 
+        <hr>
 
     </main>
 
@@ -140,7 +138,7 @@
         </div>
         
         <div>
-            <h3>Quick Links</h3>
+            <h4>Quick Links</h4>
             <ul class="quick-links">
                 <li>About Us</li>
                 <li>Blog</li>
@@ -150,7 +148,7 @@
         </div>
 
         <div>
-            <h3>Legal Stuff</h3>
+            <h4>Legal Stuff</h4>
             <ul class="legal-stuff">
                 <li>Disclaimer</li>
                 <li>Financing</li>
@@ -160,9 +158,8 @@
         </div>
 
         <div>
-            <h3>knowing you're always on the best energy deal. 
-            </h3>
-            <span></span>
+            <h4>Knowing you're always on <br> the best energy deal.</h4>
+            <div class="sign-up-box"></div>
             <button>Sign up now <a href=""></a></button>
         </div>
     </footer>
