--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
             <div class="text">
                 <h1>The Design Thinking superpowers</h1>
                 <p>Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p>
+               <div class="intro-buttons">
                 <button>Get started<a href=""></a></button>
-                <p>Watch the video</p>
+                <img src="icons/play.png" alt="play-button" class="play-icon">
+                <a href="" class="watch-video">Watch the video</a>
+                </div>
             </div>
             <div>
                 <img src="images/three-people.png" alt="">
@@ -40,9 +43,7 @@
         </section>
 
         <section class="we-design-tools">
-            <div>
-                <h2>We design tools to unveil your superpowers</h2>
-            </div>
+            <h2 class="we-design-heading">We design tools to unveil your superpowers</h2>
             <div class="example">
                 <div class="service">
                     <img src="icons/first-click.png" alt="" class="icon">
@@ -68,14 +69,12 @@
                     <p>Personal choices and the overall personality of the person.</p>
                 </div>
             </div>
-            <div>
-                <button>Sign up now<a href=""></a></button>
-            </div>
+            <button>SIGN UP NOW<a href=""></a></button>
         </section>
 
         <section class="design-professionals"> 
             <div class="content">
-                <p>Effortless Validation for</p>
+                <p class="pre-h2">Effortless Validation for</p>
                 <h2>Design Professionals</h2>
                 <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person.</p> 
                 <h4>Accessory makers</h4>
@@ -98,7 +97,7 @@
             </div>
 
             <div class="content">
-                <p>Easier decision making for</p>
+                <p class="pre-h2">Easier decision making for</p>
                 <h2>Product managers</h2>
                 <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. </p>
                 <ul>
@@ -112,7 +111,7 @@
 
         <section class="marketers">
             <div class="content">
-                <p>Optimisation for</p>
+                <p class="pre-h2">Optimisation for</p>
                 <h2>Marketers</h2>
                 <p>Few would argue that, despite the advancements of feminism over the past three decades, women still face a double standard when it comes to their behavior. 
                 <h4>Accessory makers</h4>
