adjustments made on nav and margins of body, main and footer made

--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
 </head>
 <body>
     <nav>
-        <div class="nav.logo"><img src="icons/logo.svg" alt="logo" class="logo"></div>
-        <div>
-            <ul class="nav-links">
-                <li>Product</li>
-                <li>Customers</li>
-                <li>Pricing</li>
-                <li>Resources</li>
-            </ul>
-        </div>
-        <div class="nav-buttons">
-            <button class="sign-in">Sign In<a href=""></a></button>
-            <button class="sign-up">Sign Up<a href=""></a></button>
+        <img class="nav.logo" src="icons/logo.svg" alt="logo" class="logo">
+        <div class="nav-links-buttons">
+            <div>
+                <ul class="nav-links">
+                    <li>Product</li>
+                    <li>Customers</li>
+                    <li>Pricing</li>
+                    <li>Resources</li>
+                </ul>
+            </div>
+            <div class="nav-buttons">
+                <button class="sign-in">Sign In<a href=""></a></button>
+                <button class="sign-up">Sign Up<a href=""></a></button>
+            </div>
         </div>
     </nav>
 
