Comments added to index.html for structure

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Productly</title>
 </head>
 <body>
+
+<!--Navigation-->
     <nav>
         <img class="nav.logo" src="icons/logo.svg" alt="logo" class="logo">
         <div class="nav-links-buttons">
@@ -27,7 +29,11 @@
         </div>
     </nav>
 
+<!--End of navigation-->
+
     <main>
+
+<!--First block-->
         <section class="block">
             <div class="content">
                 <h1>The Design Thinking superpowers</h1>
@@ -42,6 +48,8 @@
 
         </section>
 
+
+<!--Second block-->    
         <section class="we-design-tools">
             <h2 class="we-design-heading">We design tools to unveil your superpowers</h2>
             <div class="service">
@@ -72,6 +80,8 @@
             <button>SIGN UP NOW<a href=""></a></button>
         </section>
 
+
+<!--Third block-->
         <section class="block"> 
             <div class="content">
                 <p class="pre-h2">Effortless Validation for</p>
@@ -88,6 +98,8 @@
             <img src="images/guy-red.png" alt="">
         </section>
 
+
+<!--Fourth block-->
         <section class="block">
             <img src="images/guy-blue.png" alt="">
           
@@ -103,6 +115,8 @@
              </div> 
         </section>
 
+
+<!--Fifth block-->    
         <section class="block">
             <div class="content">
                 <p class="pre-h2">Optimisation for</p>
@@ -122,6 +136,9 @@
         <hr>
 
     </main>
+
+
+<!--Footer-->
 
     <footer>
         <img src="icons/logo.svg" alt="logo" class="logo">
